Move dependabot to monthly intervals
We don't need all the spam

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -9,21 +9,21 @@ updates:
   - package-ecosystem: "github-actions"
     directory: "/"
     schedule:
-      interval: "weekly"
+      interval: "monthly"
 
   # Maintain dependencies for npm
   - package-ecosystem: "npm"
     directory: "/stylua-npm-bin"
     schedule:
-      interval: "weekly"
+      interval: "monthly"
 
   - package-ecosystem: "npm"
     directory: "/stylua-vscode"
     schedule:
-      interval: "weekly"
-      
+      interval: "monthly"
+
   # Maintain dependencies for cargo
   - package-ecosystem: "cargo"
     directory: "/"
     schedule:
-      interval: "weekly"
+      interval: "monthly"
