--- a/stylua-vscode/package.json
+++ b/stylua-vscode/package.json
@@ -105,7 +105,7 @@
     "lint": "eslint src --ext ts",
     "format": "prettier --write src",
     "check:format": "prettier --check src",
-    "test": "node ./out/test/runTest.js"
+    "test": "vscode-test"
   },
   "devDependencies": {
     "@types/glob": "^7.1.3",
@@ -116,12 +116,13 @@
     "@types/vscode": "^1.82.0",
     "@typescript-eslint/eslint-plugin": "^4.15.2",
     "@typescript-eslint/parser": "^4.15.2",
+    "@vscode/test-cli": "^0.0.4",
+    "@vscode/test-electron": "^2.3.6",
     "eslint": "^7.20.0",
     "glob": "^7.1.6",
     "mocha": "^10.2.0",
     "prettier": "^2.3.1",
-    "typescript": "^4.2.2",
-    "vscode-test": "^1.6.1"
+    "typescript": "^4.2.2"
   },
   "dependencies": {
     "ignore": "^5.1.8",
