--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,7 +19,17 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - name: Test (Luau)
-        run: cargo test --features luau --release # TODO: ideally we don't need to run in release mode!
+        run: cargo test --features luau
+
+  # TODO: ideally this step isn't needed, but we have to gate some tests behind release mode
+  # we do this to ensure they still run in CI
+  # https://github.com/Kampfkarren/full-moon/issues/140
+  test_luau_release:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - name: Test (Luau - Release mode)
+        run: cargo test --features luau --release
 
   test_lua52:
     runs-on: ubuntu-latest
