Add status bar instead of error notifications (VSC extension) (#826)
* Add option to hide formatting errors

* Add status bar item and remove notification setting

* Switch to language status item and update on editor change

* Update changelog

---------

Co-authored-by: JohnnyMorganz <johnnymorganz@outlook.com>

--- a/stylua-vscode/package.json
+++ b/stylua-vscode/package.json
@@ -42,6 +42,11 @@
         "command": "stylua.authenticate",
         "title": "Authorize StyLua to use GitHub API",
         "category": "StyLua"
+      },
+      {
+        "command": "stylua.showOutputChannel",
+        "title": "Show Output Channel",
+        "category": "StyLua"
       }
     ],
     "configuration": {
@@ -87,7 +92,7 @@
         "stylua.disableVersionCheck": {
           "type": "boolean",
           "default": false,
-          "description": "Disable checking the version of stylua for newer versions. Useful if you do not want network requests"
+          "description": "Disable checking the version of stylua for newer versions. Useful if you do not want network requests."
         },
         "stylua.searchParentDirectories": {
           "type": "boolean",
