--- a/stylua-vscode/package.json
+++ b/stylua-vscode/package.json
@@ -79,7 +79,8 @@
           "enumDescriptions": [
             "The most recent version released. This will always keep you up to date."
           ],
-          "markdownDescription": "The release version to install. This is overridden by `#stylua.targetReleaseVersion#`."
+          "markdownDescription": "The release version to install. This is overridden by `#stylua.targetReleaseVersion#`.",
+          "markdownDeprecationMessage": "Use `#stylua.targetReleaseVersion#` instead, and the `Stylua: Select Version` command."
         },
         "stylua.targetReleaseVersion": {
           "type": "string",
