extension: mark `.styluaignore` as an ignore file

--- a/stylua-vscode/package.json
+++ b/stylua-vscode/package.json
@@ -54,6 +54,14 @@
         "category": "StyLua"
       }
     ],
+    "languages": [
+      {
+        "id": "ignore",
+        "extensions": [
+          ".styluaignore"
+        ]
+      }
+    ],
     "configuration": {
       "title": "StyLua",
       "properties": {
