--- a/stylua-vscode/package.json
+++ b/stylua-vscode/package.json
@@ -15,7 +15,7 @@
   "icon": "assets/icon.png",
   "version": "1.6.0",
   "engines": {
-    "vscode": "^1.74.0"
+    "vscode": "^1.85.0"
   },
   "categories": [
     "Formatters"
@@ -30,7 +30,7 @@
     "onLanguage:lua",
     "onLanguage:luau"
   ],
-  "main": "./out/extension.js",
+  "main": "./dist/extension.js",
   "contributes": {
     "commands": [
       {
@@ -132,10 +132,13 @@
     }
   },
   "scripts": {
-    "vscode:prepublish": "npm run compile",
-    "compile": "tsc -p ./",
-    "watch": "tsc -watch -p ./",
-    "pretest": "npm run compile && npm run lint",
+    "vscode:prepublish": "npm run package",
+    "compile": "webpack",
+    "watch": "webpack --watch",
+    "package": "webpack --mode production --devtool hidden-source-map",
+    "compile-tests": "tsc -p . --outDir out",
+    "watch-tests": "tsc -p . -w --outDir out",
+    "pretest": "npm run compile-tests && npm run compile && npm run lint",
     "lint": "eslint src --ext ts",
     "format": "prettier --write src",
     "check:format": "prettier --check src",
@@ -147,7 +150,7 @@
     "@types/node": "^12.20.4",
     "@types/node-fetch": "^2.5.8",
     "@types/unzipper": "^0.10.8",
-    "@types/vscode": "^1.74.0",
+    "@types/vscode": "^1.85.0",
     "@types/which": "^3.0.3",
     "@typescript-eslint/eslint-plugin": "^6.16.0",
     "@typescript-eslint/parser": "^6.16.0",
@@ -157,7 +160,10 @@
     "glob": "^7.1.6",
     "mocha": "^10.2.0",
     "prettier": "^2.3.1",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "ts-loader": "^9.2.8",
+    "webpack": "^5.70.0",
+    "webpack-cli": "^4.9.2"
   },
   "dependencies": {
     "ignore": "^5.1.8",
