--- a/Cargo.toml
+++ b/Cargo.toml
@@ -41,8 +41,7 @@ console = "0.15.7"
 crossbeam-channel = "0.5.8"
 ec4rs = { version = "1.0.2", optional = true }
 env_logger = { version = "0.10.0", default-features = false }
-# full_moon = "0.19.0"
-full_moon = { git = "https://github.com/Kampfkarren/full-moon", rev = "9bf29e41838187d197cb59a188f4a2e8364137a6" }
+full_moon = "1.1.0"
 globset = "0.4.13"
 ignore = "0.4.20"
 lazy_static = "1.4.0"
