--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -56,7 +56,7 @@ jobs:
       - name: Test Build (wasm)
         run: |
           rustup target add wasm32-unknown-unknown
-          cargo check --target wasm32-unknown-unknown
+          cargo check --target wasm32-unknown-unknown --features luau,lua52,lua53,lua54,luajit
 
   test_wasm_build:
     runs-on: ubuntu-latest
