Update to new full-moon version v1.1.1 (#854)
* Update to new full-moon version

* simplify err message

* fix token

* Support Lua version customisation

* compile full moon with release optimisations

* Update to Boxed anonymous function

* Add proper handling for shebang

* Set default lua version to all features, to make it easier to get started

Means its technically not a breaking change

* Handle left associativity of type unions / intersections

* Update callback hanging snapshot

This formatting is actually correct - we don't have type pack unions,
so we should be hanging at the union type after the return

* Support LuaJIT as a separate syntax option

* Rename config option from `lua_version` to `syntax`

* Fix tests and re-enable large example in debug mode

* Use released full moon v1.1.0

* Add command line option to configure syntax and update changelog

* Bump full-moon to 1.1.1

* Fix compilation for luau

* Handle access modifier in type array and tables

* Handle new type info and union set up

Somewhat ugly code, designed to ensure there is snapshot diff.
But, the code can be made nicer in #910

* Cleanup

* Fix verify_ast for luajit

* Fix wasm build on CI

* Update changelog about luajit

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,16 +21,6 @@ jobs:
       - name: Test (Luau)
         run: cargo test --features luau
 
-  # TODO: ideally this step isn't needed, but we have to gate some tests behind release mode
-  # we do this to ensure they still run in CI
-  # https://github.com/Kampfkarren/full-moon/issues/140
-  test_luau_release:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - name: Test (Luau - Release mode)
-        run: cargo test --features luau --release
-
   test_lua52:
     runs-on: ubuntu-latest
     steps:
@@ -52,6 +42,13 @@ jobs:
       - name: Test (Lua 5.4)
         run: cargo test --features lua54
 
+  test_luajit:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - name: Test (LuaJIT)
+        run: cargo test --features luajit
+
   test_wasm:
     runs-on: ubuntu-latest
     steps:
@@ -59,7 +56,7 @@ jobs:
       - name: Test Build (wasm)
         run: |
           rustup target add wasm32-unknown-unknown
-          cargo check --target wasm32-unknown-unknown
+          cargo check --target wasm32-unknown-unknown --features luau,lua52,lua53,lua54,luajit
 
   test_wasm_build:
     runs-on: ubuntu-latest
