--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,6 +14,13 @@ jobs:
       - name: Test (default)
         run: cargo test
 
+  test_no_default_features:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - name: Test (default)
+        run: cargo test --no-default-features
+
   test_luau:
     runs-on: ubuntu-latest
     steps:
@@ -48,6 +55,13 @@ jobs:
       - uses: actions/checkout@v4
       - name: Test (LuaJIT)
         run: cargo test --features luajit
+
+  test_all_features:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - name: Test (all features)
+        run: cargo test --all_features
 
   test_wasm:
     runs-on: ubuntu-latest
