--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -56,6 +56,13 @@ jobs:
       - name: Test (LuaJIT)
         run: cargo test --features luajit
 
+  test_cfxlua:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - name: Test (CfxLua)
+        run: cargo test --features cfxlua
+
   test_all_features:
     runs-on: ubuntu-latest
     steps:
@@ -70,7 +77,7 @@ jobs:
       - name: Test Build (wasm)
         run: |
           rustup target add wasm32-unknown-unknown
-          cargo check --target wasm32-unknown-unknown --features luau,lua52,lua53,lua54,luajit
+          cargo check --target wasm32-unknown-unknown --features luau,lua52,lua53,lua54,luajit,cfxlua
 
   test_wasm_build:
     runs-on: ubuntu-latest
