Support Cfx Lua Syntax (#972)
* start with cfxlua support

* fix: enhance CFXLua support for backtick string literals in format_token function

* CFXLua -> CfxLua

* Add tests

* Add CfxLua to CI

* Move compound op formatting to generic location

* Handle set constructor field

* Extract out string literal handling

* Ensure cfxlua is enabled in "All" mode, and fix symbol parsing

* Update snapshots

* Handle in unpacking

* Update snapshot

* Formatting

* Update changelog and readme

* Fix compilation

* Enable compound op for cfxlua

---------

Co-authored-by: JohnnyMorganz <johnnymorganz@outlook.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,6 +31,7 @@ lua52 = ["full_moon/lua52"]
 lua53 = ["lua52", "full_moon/lua53"]
 lua54 = ["lua53", "full_moon/lua54"]
 luajit = ["full_moon/luajit"]
+cfxlua = ["lua54", "full_moon/cfxlua"]
 editorconfig = ["ec4rs"]
 
 [dependencies]
