--- a/wasm/package.json
+++ b/wasm/package.json
@@ -27,34 +27,14 @@
     ],
     "type": "module",
     "main": "stylua_lib.cjs",
-    "module": "stylua_lib_bundler.js",
+    "module": "stylua_lib.mjs",
     "types": "stylua.web/stylua_lib.d.ts",
     "exports": {
         ".": {
-            "webpack": {
-                "node": "./stylua_lib.mjs",
-                "default": "./stylua_lib_bundler.js"
-            },
-            "require": {
-                "types": "./stylua_lib.d.cts",
-                "default": "./stylua_lib.cjs"
-            },
-            "node": {
-                "types": "./stylua_lib.d.mts",
-                "default": "./stylua_lib.mjs"
-            },
-            "deno": {
-                "types": "./stylua_lib.d.mts",
-                "default": "./stylua_lib.mjs"
-            },
-            "bun": {
-                "types": "./stylua_lib.d.mts",
-                "default": "./stylua_lib.mjs"
-            },
-            "default": {
-                "types": "./stylua_lib_bundler.d.ts",
-                "default": "./stylua_lib_bundler.js"
-            }
+            "types": "./stylua.web/stylua_lib.d.ts",
+            "require": "./stylua_lib.cjs",
+            "import": "./stylua_lib.mjs",
+            "default": "./stylua_lib.mjs"
         },
         "./web": {
             "types": "./stylua.web/stylua_lib.d.ts",
@@ -62,7 +42,7 @@
         },
         "./web/*": "./stylua.web/*",
         "./stylua_lib_bg.wasm": "./stylua.web/stylua_lib_bg.wasm",
-        "./package.josn": "./package.josn",
+        "./package.json": "./package.json",
         "./*": "./*"
     },
     "browser": {
@@ -78,5 +58,10 @@
         "lua",
         "lua51",
         "formatter"
-    ]
+    ],
+    "devDependencies": {
+        "@rollup/plugin-commonjs": "^28.0.6",
+        "@rollup/plugin-node-resolve": "^16.0.1",
+        "rollup": "^4.44.0"
+    }
 }
