--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,11 +4,11 @@ build-backend = "pseudo_builder"
 
 [tool.release-gitter]
 git-url = "https://github.com/JohnnyMorganz/StyLua"
-extract-files = ["stylua"]
+extract-all = true
 format = "stylua-{system}-{arch}.zip"
-exec = "chmod +x stylua"
 [tool.release-gitter.map-arch]
 arm64 = "aarch64"
+AMD64 = "x86_64"
 [tool.release-gitter.map-system]
 Darwin = "macos"
 Windows = "windows"
