--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -132,7 +132,7 @@ jobs:
 
       - name: Test
         run: |
-          docker run --rm ${{ steps.meta.outputs.tags }}
+          docker run --rm ${{ steps.meta.outputs.tags }} -- --help
 
   lint:
     runs-on: ubuntu-latest
