--- a/Cargo.toml
+++ b/Cargo.toml
@@ -52,7 +52,7 @@ num_cpus = "1.16.0"
 regex = "1.10.2"
 serde = "1.0.188"
 serde_json = "1.0.108"
-similar = { version = "2.3.0", features = ["text", "inline", "serde"] }
+similar = { version = "2.3.0", features = ["text", "inline", "serde", "bytes"] }
 strum = { version = "0.25.0", features = ["derive"], optional = true }
 thiserror = "1.0.49"
 threadpool = "1.8.1"
