--- a/Cargo.toml
+++ b/Cargo.toml
@@ -53,6 +53,7 @@ regex = "1.10.2"
 serde = "1.0.188"
 serde_json = "1.0.108"
 similar = { version = "2.3.0", features = ["text", "inline", "serde", "bytes"] }
+smol_str = "<0.3.4"
 strum = { version = "0.25.0", features = ["derive"], optional = true }
 thiserror = "1.0.49"
 threadpool = "1.8.1"
