--- a/wasm/package.json
+++ b/wasm/package.json
@@ -12,65 +12,40 @@
     "url": "https://github.com/johnnymorganz/stylua"
   },
   "files": [
-    "stylua.web/stylua_lib_bg.wasm.d.ts",
-    "stylua.web/stylua_lib_bg.wasm",
-    "stylua.web/stylua_lib.d.ts",
-    "stylua.web/stylua_lib.js",
-    "stylua_lib_bundler_wbg.cjs",
-    "stylua_lib_bundler.d.ts",
-    "stylua_lib_bundler.js",
-    "stylua_lib.cjs",
-    "stylua_lib.d.cts",
-    "stylua_lib.d.mts",
-    "stylua_lib.mjs",
-    "LICENSE.md"
+    "stylua_lib_*",
+    "stylua_lib.*",
+    "*.md"
   ],
   "type": "module",
-  "main": "stylua_lib.cjs",
-  "module": "stylua_lib_bundler.js",
-  "types": "stylua.web/stylua_lib.d.ts",
+  "main": "stylua_lib_node.cjs",
+  "module": "stylua_lib.js",
+  "types": "stylua_lib.d.ts",
   "exports": {
     ".": {
-      "webpack": {
-        "node": "./stylua_lib.mjs",
-        "default": "./stylua_lib_bundler.js"
-      },
-      "require": {
-        "types": "./stylua_lib.d.cts",
-        "default": "./stylua_lib.cjs"
-      },
+      "types": "./stylua_lib.d.ts",
+      "webpack": "./stylua_lib.js",
       "node": {
-        "types": "./stylua_lib.d.mts",
-        "default": "./stylua_lib.mjs"
+        "module-sync": "./stylua_lib_node.mjs",
+        "require": "./stylua_lib_node.cjs",
+        "default": "./stylua_lib_node.mjs"
       },
-      "deno": {
-        "types": "./stylua_lib.d.mts",
-        "default": "./stylua_lib.mjs"
-      },
-      "bun": {
-        "types": "./stylua_lib.d.mts",
-        "default": "./stylua_lib.mjs"
-      },
-      "default": {
-        "types": "./stylua_lib_bundler.d.ts",
-        "default": "./stylua_lib_bundler.js"
-      }
+      "deno": "./stylua_lib_deno.js",
+      "bun": "./stylua_lib_node.mjs",
+      "default": "./stylua_lib.js"
     },
     "./web": {
-      "types": "./stylua.web/stylua_lib.d.ts",
-      "default": "./stylua.web/stylua_lib.js"
+      "types": "./stylua_lib_web.d.ts",
+      "default": "./stylua_lib_web.js"
     },
-    "./web/*": "./stylua.web/*",
-    "./stylua_lib_bg.wasm": "./stylua.web/stylua_lib_bg.wasm",
-    "./package.josn": "./package.josn",
+    "./stylua_lib_bg.wasm": "./stylua_lib_bg.wasm",
+    "./package.json": "./package.json",
     "./*": "./*"
   },
-  "browser": {
-    "wbg": "./stylua_lib_bundler_wbg.cjs"
-  },
   "sideEffects": [
-    "stylua_lib.mjs",
-    "stylua_lib_bundler.js"
+    "./stylua_lib.js",
+    "./stylua_lib_node.mjs",
+    "./stylua_lib_node.cjs",
+    "./stylua_lib_deno.js"
   ],
   "keywords": [
     "cli",
